--- a/src/main/java/dk/eazyit/eazyregnskab/web/components/forms/LoginNavBarForm.html
+++ b/src/main/java/dk/eazyit/eazyregnskab/web/components/forms/LoginNavBarForm.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 <wicket:panel>
-        <input wicket:id="userName" type="text" class="span2">
-        <input wicket:id="password " type="password" class="span2">
+        <input wicket:id="userName" type="text" class="input-medium">
+        <input wicket:id="password" type="password" class="input-medium">
         <button wicket:id="login" type="submit" class="btn"></button>
 </wicket:panel>
 </body>
