--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.html
@@ -46,20 +46,57 @@
         margin-top: 28px;
     }
 
+        /* Sticky footer styles
+        -------------------------------------------------- */
+
+    html,
+    body {
+        height: 100%;
+        /* The html and body elements cannot have any padding or margin. */
+    }
+
+        /* Wrapper for page content to push down footer */
+    #wrap {
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        /* Negative indent footer by it's height */
+        margin: 0 auto -60px;
+    }
+
+        /* Set the fixed height of the footer here */
+    #push,
+    #footer {
+        height: 60px;
+    }
+
+    #footer {
+        background-color: #f5f5f5;
+    }
+
 </style>
 
-<div class="row-fluid">
-    <div class="span12">
-        <div wicket:id="topMenu">
+<div id="wrap">
+
+    <div class="row-fluid">
+        <div class="span12">
+            <div wicket:id="topMenu">
+            </div>
         </div>
     </div>
+
+
+    <wicket:child>
+
+
+    </wicket:child>
+
+    <div id="push"></div>
 </div>
 
-
-<wicket:child>
-
-
-</wicket:child>
+<div id="footer" style="text-align: center">
+    <p class="muted credit">&copy; EazyIT 2013</p>
+</div>
 
 
 </body>
