#14: Create menu structure

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.html
@@ -80,7 +80,7 @@
 
     <div class="row-fluid">
         <div class="span12">
-            <div wicket:id="topMenu">
+            <div wicket:id="topMenu" class="navbar navbar-inverse">
             </div>
         </div>
     </div>
