--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
@@ -4,7 +4,39 @@
 <body>
 <wicket:extend>
 
-This is a secure page.
+    <div class="container">
+        <div class="row-fluid">
+            <div class="span2">
+
+            </div>
+            <div class="span10">
+                <h1>
+                    <wicket:message key="title"></wicket:message>
+                </h1>
+            </div>
+        </div>
+        <div class="row-fluid">
+            <div class="span2">
+
+
+                <span wicket:id="list" class="nav nav-list">
+                    <a class="btn btn-block" wicket:id="link" href="#">
+                        <span wicket:id="label"></span>
+                    </a>
+                </span>
+
+
+            </div>
+            <div class="span10">
+
+                <wicket:child>
+
+                </wicket:child>
+            </div>
+
+        </div>
+    </div>
+
 
 </wicket:extend>
 </body>
