#2: Design front page and public subpages

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.html
@@ -9,6 +9,14 @@
 
 <body>
 
+<script id="test">
+
+    jQuery(function ($) {
+        $('[rel=tooltip]').tooltip()
+    });
+
+</script>
+
 <style type="text/css">
 
     body {
