--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
@@ -13,6 +13,7 @@
                 <h1>
                     <wicket:message key="title"></wicket:message>
                 </h1>
+                <select wicket:id="legalEntityList"></select>
             </div>
         </div>
         <div class="row-fluid">
