--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/InfoPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/InfoPage.html
@@ -5,14 +5,14 @@
 <wicket:extend>
 
     <div class="container">
-        <div class="row-fluid">
+        <div class="row">
             <div class="span12">
                 <h1>
                     <wicket:message key="title"></wicket:message>
                 </h1>
             </div>
         </div>
-        <div class="row-fluid">
+        <div class="row">
                    <div class="span7">
                        <h2>
                            <wicket:message key="info.text.heading"></wicket:message>
