--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
@@ -2,42 +2,51 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/">
 <body>
+
 <wicket:extend>
 
     <div class="container">
-        <div class="row-fluid">
-            <div class="span2">
+        <div class="row">
 
+            <div class="span3">
+                <p>
+
+                <h3>
+                    <wicket:message key="legal.entity"></wicket:message>
+                </h3>
+                <select wicket:id="legalEntityList" span="span3" id="legalEntityList"></select>
+                </p>
             </div>
-            <div class="span10">
+
+            <div class="span9">
                 <h1>
                     <wicket:message key="title"></wicket:message>
                 </h1>
-                <select wicket:id="legalEntityList"></select>
+                <legend>
+                    <wicket:message key="description"></wicket:message>
+                </legend>
             </div>
         </div>
-        <div class="row-fluid">
-            <div class="span2">
+        <div class="row">
 
-
-                <span wicket:id="list" class="nav nav-list">
-                    <a class="btn btn-block" wicket:id="link" href="#">
+            <div class="span3">
+                <ul class="nav nav-tabs nav-stacked">
+                    <li wicket:id="linkList"><a wicket:id="link">
                         <span wicket:id="label"></span>
-                    </a>
-                </span>
-
-
+                    </a></li>
+                </ul>
             </div>
-            <div class="span10">
 
+            <div class="span9">
+                <div wicket:id="feedback"></div>
                 <wicket:child>
 
                 </wicket:child>
             </div>
 
         </div>
-    </div>
 
+    </div>
 
 </wicket:extend>
 </body>
