--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
@@ -8,17 +8,14 @@
     <div class="container">
         <div class="row">
 
-            <div class="span3">
-                <p>
-
-                <h3>
+            <div class="span2">
+                <h4>
                     <wicket:message key="legal.entity"></wicket:message>
-                </h3>
-                <select wicket:id="legalEntityList" span="span3" id="legalEntityList"></select>
-                </p>
+                </h4>
+                <select wicket:id="legalEntityList" class="span2" id="legalEntityList"></select>
             </div>
 
-            <div class="span9">
+            <div class="span10">
                 <h1>
                     <wicket:message key="title"></wicket:message>
                 </h1>
@@ -29,7 +26,7 @@
         </div>
         <div class="row">
 
-            <div class="span3">
+            <div class="span2">
                 <ul class="nav nav-tabs nav-stacked">
                     <li wicket:id="linkList"><a wicket:id="link">
                         <span wicket:id="label"></span>
@@ -37,7 +34,7 @@
                 </ul>
             </div>
 
-            <div class="span9">
+            <div class="span10">
                 <div wicket:id="feedback"></div>
                 <wicket:child>
 
