#30: Create sorting of Dataproviders

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.html
@@ -82,6 +82,14 @@
         background-color: #f5f5f5;
     }
 
+    table  td.align-right {
+        text-align: right;
+    }
+
+    table  td.align-left {
+        text-align: left;
+    }
+
 </style>
 
 <div id="wrap">
