#72: Not able to delete legalentity

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
@@ -12,7 +12,7 @@
                 <h4>
                     <wicket:message key="legal.entity"></wicket:message>
                 </h4>
-                <select wicket:id="legalEntityList" class="span2" id="legalEntityList"></select>
+                <select wicket:id="legalEntityChooser" class="span2" id="legalEntityChooser"></select>
             </div>
 
             <div class="span10">
