#76: Create filters for balancepage

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
@@ -5,6 +5,13 @@
 
 <wicket:extend>
 
+    <style>
+        .select2-container.span2 {
+            margin-left: 0;
+        }
+
+    </style>
+
     <div class="container">
         <div class="row">
 
