#82: Elaborate pricing page

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/panels/BalancePanel.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/panels/BalancePanel.html
@@ -16,8 +16,12 @@
             <th>
                 <wicket:message key="account.name"></wicket:message>
             </th>
-            <th>
+            <th style="text-align: right">
                 <wicket:message key="account.sum"></wicket:message>
+            </th>
+            <td></td>
+            <th style="text-align: right">
+                <wicket:message key="account.sum.compare"></wicket:message>
             </th>
         </tr>
         <span>
@@ -28,8 +32,12 @@
                 <td>
                     <span wicket:id="accountName"></span>
                 </td>
-                <td>
+                <td style="text-align: right">
                     <span wicket:id="sum"></span>
+                </td>
+                <td></td>
+                <td style="text-align: right">
+                    <span wicket:id="sumCompare"></span>
                 </td>
             </tr>
         </span>
