#84: Add date labels to balancepage above columns with amounts #79: BallancePagereport implement year to date

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/panels/BalancePanel.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/panels/BalancePanel.html
@@ -17,11 +17,13 @@
                 <wicket:message key="account.name"></wicket:message>
             </th>
             <th style="text-align: right">
-                <wicket:message key="account.sum"></wicket:message>
+                <wicket:message key="account.sum"></wicket:message><br>
+                <span wicket:id="dates"></span>
             </th>
             <td></td>
             <th style="text-align: right">
-                <wicket:message key="account.sum.compare"></wicket:message>
+                <span wicket:id="compareType"></span><br>
+                <span wicket:id="datesCompare"></span>
             </th>
         </tr>
         <span>
