#97: Format ChartOfAccountsPage same as balancepage

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
@@ -12,6 +12,19 @@
 
     </style>
 
+    <style>
+        tr.headline {
+            background-color: #dddddd;
+            font-weight: bold;
+        }
+
+        tr.sumfrom {
+            background-color: #b1b1b1;
+            font-weight: bold;
+        }
+
+    </style>
+
     <div class="container">
         <div class="row">
 
