#112: Remove DAO objects from validators and use service

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
@@ -14,12 +14,17 @@
 
     <style>
         tr.headline {
-            background-color: #dddddd;
+            background-color: #ededed;
             font-weight: bold;
         }
 
         tr.sumfrom {
-            background-color: #b1b1b1;
+            background-color: #cacaca;
+            font-weight: bold;
+        }
+
+        tr.category {
+            background-color: #989898;
             font-weight: bold;
         }
 
