--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 
 <head>
-    <title><wicket:message key="page.title"></wicket:message></title>
+    <title><wicket:message key="title"></wicket:message></title>
 </head>
 
 <body>
