#100: Implement fiscal years and their limitations

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/panels/action/ActionPanel.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/panels/action/ActionPanel.html
@@ -1,4 +1,15 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
-<a href="#" wicket:id="select"><wicket:message key="button.edit"></wicket:message></a>
-<a href="#" wicket:id="delete"><wicket:message key="button.delete"></wicket:message></a>
+
+    <a href="#" class="btn" wicket:id="select">
+        <wicket:message key="button.edit"></wicket:message>
+    </a>
+    <a href="#" class="btn" wicket:id="delete">
+        <wicket:message key="button.delete"></wicket:message>
+    </a>
+
+    <wicket:child>
+
+
+    </wicket:child>
+
 </wicket:panel>
