#100: Implement fiscal years and their limitations and small UI improvements

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/panels/action/ActionPanel.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/panels/action/ActionPanel.html
@@ -1,10 +1,10 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
 
-    <a href="#" class="btn" wicket:id="select">
-        <wicket:message key="button.edit"></wicket:message>
+    <a href="#" class="btn btn-primary" wicket:id="select">
+        <i class="icon-edit"></i>
     </a>
-    <a href="#" class="btn" wicket:id="delete">
-        <wicket:message key="button.delete"></wicket:message>
+    <a href="#" class="btn btn-danger" wicket:id="delete">
+        <i class="icon-remove"></i>
     </a>
 
     <wicket:child>
