--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/panels/action/FiscalYearActionPanel.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/panels/action/FiscalYearActionPanel.html
@@ -4,11 +4,11 @@
 
 <wicket:extend>
 
-    <a href="#" class="btn" wicket:id="open">
-        <wicket:message key="button.open"></wicket:message>
+    <a href="#" class="btn btn-success" wicket:id="open">
+        <i class="icon-folder-open"></i>
     </a>
-    <a href="#" class="btn" wicket:id="close">
-        <wicket:message key="button.close"></wicket:message>
+    <a href="#" class="btn btn-warning" wicket:id="close">
+        <i class="icon-folder-close"></i>
     </a>
 
 </wicket:extend>
