#157: Watch postings in modal window - rewritten completely

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/popup/NotificationPopUp.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/popup/NotificationPopUp.html
@@ -6,26 +6,10 @@
 </head>
 <body>
 
-
-<script id="test">
-
-    jQuery(function ($) {
-        $('[rel=tooltip]').tooltip()
-    });
-
+<script language="javascript">
+    setTimeout("self.close();", 5000)
 </script>
 
-<div class="container">
-
-    <div class="row-fluid">
-      <div class="span12"></div>
-    </div>
-
-    <wicket:child>
-
-    </wicket:child>
-
-</div>
-
+<span wicket:id="info"></span>
 </body>
 </html>
