--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page.html
@@ -1,44 +1,63 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/">
-<head>
-    <title></title>
-</head>
-<body>
+
+<wicket:panel>
+
+    <script id="test">
+
+        jQuery(function ($) {
+            $('[rel=tooltip]').tooltip()
+        });
+
+    </script>
+
+    <style>
+        .tooltip {
+            z-index: 2000 !important;
+        }
+    </style>
+    <br>
+    <br>
 
 
-<wicket:extend>
-
-
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="#" class="btn" wicket:id="postings.copy">
-        <wicket:message key="postings.copy"></wicket:message>
-    </a>&nbsp;
-    <a href="#" class="btn" wicket:id="postings.flip">
-        <wicket:message key="postings.flip"></wicket:message>
-    </a>&nbsp;
-    <a href="#" class="btn" wicket:id="postings.reverse">
-        <wicket:message key="postings.reverse"></wicket:message>
-    </a>
+            <wicket:message key="postings.copy"></wicket:message>
+        </a>&nbsp;
+        <a href="#" class="btn" wicket:id="postings.flip">
+            <wicket:message key="postings.flip"></wicket:message>
+        </a>&nbsp;
+        <a href="#" class="btn" wicket:id="postings.reverse">
+            <wicket:message key="postings.reverse"></wicket:message>
+        </a>
+
     <br>
     <br>
     <table class="table table-striped ">
         <tr>
-            <th>
+            <th class="span2">
                 <wicket:message key="date"></wicket:message>
             </th>
-            <th>
+            <th class="span2">
+                <wicket:message key="account"></wicket:message>
+            </th>
+            <th class="span2">
                 <wicket:message key="text"></wicket:message>
             </th>
-            <th>
+            <th class="span2">
                 <wicket:message key="vatType.name"></wicket:message>
             </th>
-            <th style="text-align: right">
+            <th class="span2" style="text-align: right">
                 <wicket:message key="amount"></wicket:message>
             </th>
         </tr>
         <tr wicket:id="postings">
             <td>
                 <span wicket:id="date"></span>
+            </td>
+            <td>
+                <span wicket:id="account"></span>
             </td>
             <td>
                 <span wicket:id="text"></span>
@@ -51,6 +70,5 @@
             </td>
         </tr>
     </table>
-</wicket:extend>
-</body>
+</wicket:panel>
 </html>
