#170: Implement reverse, copy and flip postings

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page.html
@@ -28,8 +28,8 @@
         <a href="#" class="btn" wicket:id="postings.flip">
             <wicket:message key="postings.flip"></wicket:message>
         </a>&nbsp;
-        <a href="#" class="btn" wicket:id="postings.reverse">
-            <wicket:message key="postings.reverse"></wicket:message>
+        <a href="#" class="btn" wicket:id="postings.regret">
+            <wicket:message key="postings.regret"></wicket:message>
         </a>
 
     <br>
