#176: Design tables better, headline, sum, and category should be bigger text.

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.html
@@ -14,19 +14,29 @@
 
     <style>
         tr.headline {
+            font-size: 16px;
             background-color: #ededed;
             font-weight: bold;
         }
 
         tr.sumfrom {
+            font-size: 16px;
             background-color: #cacaca;
             font-weight: bold;
         }
 
         tr.category {
+            font-size: 18px;
             background-color: #989898;
             font-weight: bold;
         }
+
+        /*tr.headers {*/
+            /*font-size: 20px;*/
+            /*background-color: #ffffff;*/
+            /*font-weight: bold;*/
+        /*}*/
+
 
     </style>
 
