--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.html
@@ -11,6 +11,21 @@
 
 <body>
 
+<script id="_webengage_script_tag" type="text/javascript">
+  var _weq = _weq || {};
+  _weq['webengage.licenseCode'] = '58add0c9';
+  _weq['webengage.widgetVersion'] = "4.0";
+
+  (function(d){
+    var _we = d.createElement('script');
+    _we.type = 'text/javascript';
+    _we.async = true;
+    _we.src = (d.location.protocol == 'https:' ? "https://ssl.widgets.webengage.com" : "http://cdn.widgets.webengage.com") + "/js/widget/webengage-min-v-4.0.js";
+    var _sNode = d.getElementById('_webengage_script_tag');
+    _sNode.parentNode.insertBefore(_we, _sNode);
+  })(document);
+</script>
+
 <script id="test">
 
     jQuery(function ($) {
@@ -115,6 +130,8 @@
 <div id="footer" style="text-align: center">
     <p class="muted credit">&copy; EazyIT 2013</p>
 </div>
+
+
 
 
 </body>
